force-app/main/default/objects/Related_Association__c/Related_Association__c.object-meta.xml
<CustomObject>
    <label>Subscription Association</label>
    <nameField>
        <displayFormat>{000000}</displayFormat>
        <label>SubscriptionAssocID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Subscription Associations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>