force-app/main/default/objects/Related_Association__c/fields/AgentKey__c.field-meta.xml
<CustomField>
    <fullName>AgentKey__c</fullName>
    <formula>Subscription__r.AgentKey__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>AgentKey</label>
    <type>Text</type>
</CustomField>