force-app/main/default/objects/Related_Association__c/fields/Association__c.field-meta.xml
<CustomField>
    <fullName>Association__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Association</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.Type</field>
            <operation>equals</operation>
            <value>Association</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipName>Related_Association</relationshipName>
    <type>Lookup</type>
</CustomField>