force-app/main/default/objects/Related_Association__c/fields/Association_ID__c.field-meta.xml
<CustomField>
    <fullName>Association_ID__c</fullName>
    <formula>CASESAFEID(Association__r.Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Association ID</label>
    <type>Text</type>
</CustomField>