force-app/main/default/objects/Related_Association__c/fields/Association_Name__c.field-meta.xml
<CustomField>
    <fullName>Association_Name__c</fullName>
    <formula>Association__r.Account_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Association Name</label>
    <type>Text</type>
</CustomField>