force-app/main/default/objects/Related_Association__c/fields/Association_Office_ID__c.field-meta.xml
<CustomField>
    <fullName>Association_Office_ID__c</fullName>
    <description>Used to create outbound messages that need to include the office ID of the related association.</description>
    <formula>Association__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Association Office ID</label>
    <type>Text</type>
</CustomField>