force-app/main/default/objects/Related_Association__c/fields/Association_Status__c.field-meta.xml
<CustomField>
    <fullName>Association_Status__c</fullName>
    <formula>TEXT(Association__r.Status__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Association Status</label>
    <type>Text</type>
</CustomField>