force-app/main/default/objects/Related_Association__c/fields/Broker_Code__c.field-meta.xml
<CustomField>
    <fullName>Broker_Code__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Office ID</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>Related_Associations</relationshipName>
    <type>Lookup</type>
</CustomField>