force-app/main/default/objects/Related_Association__c/fields/Contact_ID__c.field-meta.xml
<CustomField>
    <fullName>Contact_ID__c</fullName>
    <formula>CASESAFEID(Subscription__r.Contact__r.Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact ID</label>
    <type>Text</type>
</CustomField>