force-app/main/default/objects/Related_Association__c/fields/Contact_Name__c.field-meta.xml
<CustomField>
    <fullName>Contact_Name__c</fullName>
    <formula>Subscription__r.Contact__r.FirstName+&apos; &apos;+Subscription__r.Contact__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact Name</label>
    <type>Text</type>
</CustomField>