force-app/main/default/objects/Related_Association__c/fields/External_Association__c.field-meta.xml
<CustomField>
    <fullName>External_Association__c</fullName>
    <label>External Association</label>
    <length>50</length>
    <type>Text</type>
</CustomField>