force-app/main/default/objects/Related_Association__c/fields/External_Broker_Code__c.field-meta.xml
<CustomField>
    <fullName>External_Broker_Code__c</fullName>
    <label>External Broker Code</label>
    <length>50</length>
    <type>Text</type>
</CustomField>