force-app/main/default/objects/Related_Association__c/fields/External_Subscription__c.field-meta.xml
<CustomField>
    <fullName>External_Subscription__c</fullName>
    <label>External Subscription</label>
    <length>50</length>
    <type>Text</type>
</CustomField>