force-app/main/default/objects/Related_Association__c/fields/Import_Source__c.field-meta.xml
<CustomField>
    <fullName>Import_Source__c</fullName>
    <label>Import Source</label>
    <length>100</length>
    <type>Text</type>
</CustomField>