force-app/main/default/objects/Related_Association__c/fields/PrismRelBoardID__c.field-meta.xml
<CustomField>
    <fullName>PrismRelBoardID__c</fullName>
    <label>PrismRelBoardID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>