force-app/main/default/objects/Related_Association__c/fields/Subscription_IsPrimary__c.field-meta.xml
<CustomField>
    <fullName>Subscription_IsPrimary__c</fullName>
    <formula>Subscription__r.Primary__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Subscription is Primary</label>
    <type>Checkbox</type>
</CustomField>