force-app/main/default/objects/Related_Association__c/fields/Subscription_Status__c.field-meta.xml
<CustomField>
    <fullName>Subscription_Status__c</fullName>
    <formula>TEXT(Subscription__r.Status__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Subscription Status</label>
    <type>Text</type>
</CustomField>