force-app/main/default/objects/Related_Association__c/fields/SysPrRoleKey__c.field-meta.xml
<CustomField>
    <fullName>SysPrRoleKey__c</fullName>
    <externalId>true</externalId>
    <label>SysPrRoleKey</label>
    <length>30</length>
    <type>Text</type>
</CustomField>