force-app/main/default/objects/Related_Association__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Association_Name__c</columns>
    <columns>Association__c</columns>
    <columns>NAME</columns>
    <columns>OBJECT_ID</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>